--- a/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
+++ b/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="grid-pane" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.legoshi.taskmodeller.gui.model.MainController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="grid-pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.legoshi.taskmodeller.gui.model.MainController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
       <RowConstraints maxHeight="152.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="478.0" minHeight="10.0" prefHeight="245.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="316.0" minHeight="10.0" prefHeight="240.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="102.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="478.0" minHeight="10.0" prefHeight="245.0" valignment="TOP" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="316.0" minHeight="10.0" prefHeight="240.0" valignment="TOP" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="102.0" minHeight="-Infinity" vgrow="SOMETIMES" />
     </rowConstraints>
     <HBox fx:id="itemPane" prefHeight="0.0" prefWidth="880.0" styleClass="item-pane" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
         <GridPane.margin>
@@ -23,10 +23,13 @@
          <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
       </padding>
     </HBox>
-    <Pane fx:id="drawPane" prefHeight="451.0" prefWidth="880.0" styleClass="draw-pane" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
+    <Pane fx:id="drawPane" minHeight="-Infinity" minWidth="-Infinity" styleClass="draw-pane" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
         <GridPane.margin>
           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
         </GridPane.margin>
+      <padding>
+         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+      </padding>
     </Pane>
    <MenuBar prefHeight="25.0" prefWidth="627.0" GridPane.columnSpan="2" GridPane.valignment="TOP">
      <menus>
@@ -46,5 +49,8 @@
          </items>
        </Menu>
      </menus>
+      <GridPane.margin>
+         <Insets />
+      </GridPane.margin>
    </MenuBar>
 </GridPane>
