- fix resize bug - add border on the window for object

--- a/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
+++ b/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
@@ -11,8 +11,8 @@
     </columnConstraints>
     <rowConstraints>
       <RowConstraints maxHeight="152.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="478.0" minHeight="10.0" prefHeight="245.0" valignment="TOP" vgrow="ALWAYS" />
-        <RowConstraints maxHeight="316.0" minHeight="10.0" prefHeight="240.0" valignment="TOP" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" valignment="TOP" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" valignment="TOP" vgrow="ALWAYS" />
         <RowConstraints maxHeight="102.0" minHeight="-Infinity" vgrow="SOMETIMES" />
     </rowConstraints>
     <HBox fx:id="itemPane" prefHeight="0.0" prefWidth="880.0" styleClass="item-pane" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
