- add zoom in function

--- a/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
+++ b/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
@@ -23,14 +23,6 @@
          <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
       </padding>
     </HBox>
-    <Pane fx:id="drawPane" minHeight="-Infinity" minWidth="-Infinity" styleClass="draw-pane" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
-        <GridPane.margin>
-          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </GridPane.margin>
-      <padding>
-         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-      </padding>
-    </Pane>
    <MenuBar prefHeight="25.0" prefWidth="627.0" GridPane.columnSpan="2" GridPane.valignment="TOP">
      <menus>
        <Menu mnemonicParsing="false" text="File">
@@ -43,6 +35,14 @@
            <MenuItem mnemonicParsing="false" text="Delete" />
          </items>
        </Menu>
+         <Menu mnemonicParsing="false" text="View">
+             <items>
+                 <MenuItem mnemonicParsing="false" onAction="#zoomIn" text="Zoom in" />
+             </items>
+             <items>
+                 <MenuItem mnemonicParsing="false" onAction="#zoomOut" text="Zoom out" />
+             </items>
+         </Menu>
        <Menu mnemonicParsing="false" text="Help">
          <items>
            <MenuItem mnemonicParsing="false" text="About" />
@@ -53,4 +53,15 @@
          <Insets />
       </GridPane.margin>
    </MenuBar>
+   <ScrollPane fx:id="scrollPane" pannable="true" styleClass="draw-pane" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
+      <GridPane.margin>
+         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      </GridPane.margin>
+      <padding>
+         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+      </padding>
+      <content>
+         <AnchorPane fx:id="drawPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black;" />
+      </content>
+   </ScrollPane>
 </GridPane>
