--- a/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
+++ b/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="grid-pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.legoshi.taskmodeller.gui.model.MainController">
+<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="grid-pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.legoshi.taskmodeller.gui.model.MainController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -42,6 +42,9 @@
              <items>
                  <MenuItem mnemonicParsing="false" onAction="#zoomOut" text="Zoom out" />
              </items>
+             <items>
+                 <MenuItem mnemonicParsing="false" onAction="#addWindow" text="Add Window" />
+             </items>
          </Menu>
        <Menu mnemonicParsing="false" text="Help">
          <items>
@@ -53,15 +56,7 @@
          <Insets />
       </GridPane.margin>
    </MenuBar>
-   <ScrollPane fx:id="scrollPane" pannable="true" styleClass="draw-pane" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
-      <GridPane.margin>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </GridPane.margin>
-      <padding>
-         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-      </padding>
-      <content>
-         <AnchorPane fx:id="drawPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black;" />
-      </content>
-   </ScrollPane>
+   <opaqueInsets>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </opaqueInsets>
 </GridPane>
