--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -8,6 +8,10 @@
     -fx-background-radius: 5px;
 }
 
+.draw-pane-bg {
+    -fx-background-color: #dd0000;
+}
+
 .grid-pane {
     -fx-background-color: #666666;
 }
