- add zoom in function fix - add correct object mouse movement - code cleanup

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -8,6 +8,11 @@
     -fx-background-radius: 5px;
 }
 
+.active-pane {
+    -fx-border-color: red;
+    -fx-border-radius: 5px;
+}
+
 .draw-pane-bg {
     -fx-background-color: #dd0000;
 }
