--- a/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
+++ b/src/main/resources/de/legoshi/taskmodeller/main-view.fxml
@@ -24,11 +24,16 @@
                <MenuItem mnemonicParsing="false" text="Help" />
            </Menu>
        </MenuBar>
-      <ScrollPane fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-        <content>
-          <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+      <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <children>
+            <VBox fx:id="todoBar" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
+            <ScrollPane fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+              <content>
+                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+         </children>
+      </HBox>
        <HBox prefHeight="100.0" prefWidth="880.0" styleClass="tool-bar">
          <children>
             <HBox fx:id="toolBar" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
@@ -38,12 +43,12 @@
             </HBox>
             <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
                <children>
-                  <RadioButton fx:id="standardRBTN" onAction="#onRadioButtonChange" mnemonicParsing="false" text="Standard">
+                  <RadioButton fx:id="standardRBTN" mnemonicParsing="false" onAction="#onRadioButtonChange" text="Standard">
                      <toggleGroup>
                         <ToggleGroup fx:id="group" />
                      </toggleGroup></RadioButton>
-                  <RadioButton fx:id="connectionRBTN" onAction="#onRadioButtonChange" mnemonicParsing="false" text="Connections" toggleGroup="$group" />
-                  <RadioButton fx:id="miscRBTN" onAction="#onRadioButtonChange" mnemonicParsing="false" text="Misc." toggleGroup="$group" />
+                  <RadioButton fx:id="connectionRBTN" mnemonicParsing="false" onAction="#onRadioButtonChange" text="Connections" toggleGroup="$group" />
+                  <RadioButton fx:id="miscRBTN" mnemonicParsing="false" onAction="#onRadioButtonChange" text="Misc." toggleGroup="$group" />
                </children>
                <HBox.margin>
                   <Insets />
